[package]
name = "laba3_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
criterion = "0.7.0"

[[bin]]
name = "laba3_rust"
path = "src/main.rs"

[lib]
name = "laba3_rust"
path = "src/lib.rs"


[[bench]]
name = "benchmarks"
harness = false